[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
ssh-rs = "0.5.0"
clap = { version = "4.5.16", features = ["derive"] }
tui = "0.19.0"
memmap2 = "0.9"
rayon = "1.10"
iced = "0.5"
eframe = "0.26"

log = "0.4"
env_logger = "0.10"
